--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 	<script type="text/javascript" src="bootstrap4/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="bootstrap4/js/bootstrap.bundle.min.js"></script>
 
-	<script type="text/javascript" src="javascript/index.js"></script>
 	<script type="text/javascript" src="javascript/languages.js"></script>
+	<!-- <script type="text/javascript" src="javascript/index.js"></script> -->
 
 </body>
 
