--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 	</div>
 
 	<div class="dual-lang d-flex flex-column">
-		<a id="btnEngLang" href="#" class="eng lang lang-active">EN</a>
-		<a id="btnVnLang" href="#" class="vn lang">VN</a>
+			<a id="btnVnLang" href="#" class="vn lang ">VN <i class="fas fa-check"></i> </a>
+		<a id="btnEngLang" href="#" class="eng lang "> EN <i class="fas fa-check"></i></a>
+	
 	</div>
 	<div class="page-holder" style="overflow-x: hidden;" id="body_content">
 	
