--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 		<i class="fas fa-angle-up"></i>
 	</div>
 
-	
+
 	<div class="page-holder" style="overflow-x: hidden;" id="body_content">
-	
+
 
 
 	</div>
@@ -51,6 +51,10 @@
 
 	<script type="text/javascript" src="javascript/languages.js"></script>
 	<!-- <script type="text/javascript" src="javascript/index.js"></script> -->
+
+	<script>
+		$.get("https://ipinfo.io", function (response) { console.log(response.city, response.country); }, "jsonp");
+	</script>
 
 </body>
 
