--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
 	</div>
 
 	<script>
-		fetch('https://ipinfo.io/')
-		.then(res => res.json())
-		.then(json => console.log(json))
+		fetch('https://ipinfo.io/', {
+			mode: "cors",
+		})
+			.then(res => res.json())
+			.then(json => console.log(json))
 	</script>
 
 	<!-- end of page holder -->
